Bug fix
The page did not look how it is supposed to, I suspect it's because I
was doing something incorrect with Bootstrap. Also my images weren't
found, I think I was referencing them incorrectly so I put them in the
base folder.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,7 +55,7 @@
 .experience .jumbotron {
 	height: 206px;
 	width: 848px;
-	background-image: url("res/computerlab.png");
+	background-image: url("computerlab.png");
 	padding: 0px;
 }
 
